First pass at adding User.owned relationship.
Also some refactoring.
